smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-colon-newline.smithy
// Syntax error at line 2, column 10
$version:
"2.0"
